--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@swc/plugin-emotion": "^2.5.86",
-    "monorepo-networker": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,6 +30,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
